# rqg-cli

./: .gitignore  ENTEGRASYON.md  Jenkinsfile.example  README.md  README_EN.md  example_usage.py  ornek_kullanim.ps1  ornek_kullanim.sh  pyproject.toml  rqg.yml  test_rqg.py
.github/workflows/: rqg-example.yml
docs/: architecture.md  policy-reference.md  quickstart.md
fixtures/: sample-junit-flaky.xml  sample-junit.xml
rqg/: analyze.py  cli.py  collect.py  config.py  explain.py  models.py  output.py  recommendations.py  upload.py
rqg/fingerprint/: __init__.py  sanitizer.py
rqg/parsers/: __init__.py  junit.py
rqg/policy/: __init__.py  engine.py
rqg/scoring/: __init__.py  flake.py
rqg/storage/: __init__.py  sqlite_store.py
