[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rqg"
version = "0.1.0"
description = "Release Quality Gate - CI test analysis and gating system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "lxml>=4.9.0",
    "requests>=2.28.0",
]

[project.scripts]
rqg = "rqg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rqg*"]

